<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="4dp">

    <TextView
        android:id="@+id/total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible"
        tools:text="@string/total_amount" />

    <TextView
        android:id="@+id/total_amount_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/total_amount"
        app:layout_constraintTop_toTopOf="@id/total_amount"
        app:layout_constraintBottom_toBottomOf="@id/total_amount"
        tools:text="1250"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/payments_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total_amount"
        tools:text="@string/payments" />

    <TextView
        android:id="@+id/no_payment_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textStyle="italic"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/payments_header"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/no_payment_text" />

    <LinearLayout
        android:id="@+id/payment_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_payment_text" />

    <TextView
        android:id="@+id/add_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/clickable_text_background"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/payment_container"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/add_payment" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/PrimaryButton"
        android:background="@drawable/border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_payment"
        tools:text="@string/save" />
</androidx.constraintlayout.widget.ConstraintLayout>