<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <EditText
        android:id="@+id/payment_amount_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/border"
        android:inputType="numberDecimal"
        android:visibility="gone"
        android:drawableStart="@drawable/ic_currency_rupee"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/amount" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="12dp"
        android:background="@drawable/border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payment_amount_et" />

    <EditText
        android:id="@+id/provider"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/border"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner"
        android:hint="@string/provider_hint"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/transaction_ref"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/border"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/provider"
        android:hint="@string/transaction_ref_hint"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/all_added"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:text="@string/payment_add_error"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transaction_ref"
        tools:visibility="visible"
        tools:text="All bills are added, please remove any to add/update."/>

</androidx.constraintlayout.widget.ConstraintLayout>